--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
 name: Libi
 count: 20
-operations: ['mul', 'mul', 'mul', 'mul', 'mul', 'div', 'div','div','div','div', 'bigmul', 'zeroesmul', 'devrem']
+operations: ['mul', 'mul', 'mul', 'mul', 'mul', 'div', 'div','div','div','div', 'bigmul', 'zeroesmul', 'devrem', 'fracconv', 'fracconv', 'fracconv', 'fracconv', 'fracconv']
 mul_operand_max: 90
